api_versioned_docs/version-12.1.1/avalonia/controls/win32properties.mdx
---
title: 'Win32Properties'
hide_title: true
slug: '/avalonia/controls/win32properties'
uid: 'Avalonia.Controls.Win32Properties'
commentId: 'T:Avalonia.Controls.Win32Properties'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Win32Properties Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

Set of Win32 specific properties and events that allow deeper customization of the application per platform.

</div>

<div className="apiref-page__signature">

```csharp
public class Win32Properties
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> Win32Properties
</div>
</div>

## Methods

| Name | Description |
| --- | --- |
| [AddWindowStylesCallback](#uid-b51911f72e) | Adds a callback to set the window's style. |
| [AddWndProcHookCallback](#uid-ffbfdca626) | Adds a custom callback for the window's WndProc |
| [GetNonClientHitTestResult](#uid-fb40e72aa0) | Gets the value of the `NonClientHitTestResult` attached property on the specified visual. |
| [GetWindowCornerPreference](#uid-40a77da673) | Gets the value of the `WindowCornerPreference` attached property on the specified window. |
| [RemoveWindowStylesCallback](#uid-1fa69055d6) | Removes a callback to set the window's style. |
| [RemoveWndProcHookCallback](#uid-e28e9d382c) | Removes a custom callback for the window's WndProc |
| [SetNonClientHitTestResult](#uid-880349e197) | Sets the value of the `NonClientHitTestResult` attached property on the specified visual. |
| [SetWindowCornerPreference](#uid-fafd01f2b1) | Sets the value of the `WindowCornerPreference` attached property on the specified window. |

<section className="apiref-page__member-entry">

<span id="uid-b51911f72e"></span>

### AddWindowStylesCallback Method

Adds a callback to set the window's style.

```csharp
public void AddWindowStylesCallback(Avalonia.Controls.TopLevel topLevel, Avalonia.Controls.Win32Properties.CustomWindowStylesCallback callback)
```

#### Parameters

`topLevel` [Avalonia.Controls.TopLevel](xref:Avalonia.Controls.TopLevel)

The window implementation


`callback` [Avalonia.Controls.Win32Properties.CustomWindowStylesCallback](xref:Avalonia.Controls.Win32Properties.CustomWindowStylesCallback)

The callback


</section>

<section className="apiref-page__member-entry">

<span id="uid-ffbfdca626"></span>

### AddWndProcHookCallback Method

Adds a custom callback for the window's WndProc

```csharp
public void AddWndProcHookCallback(Avalonia.Controls.TopLevel topLevel, Avalonia.Controls.Win32Properties.CustomWndProcHookCallback callback)
```

#### Parameters

`topLevel` [Avalonia.Controls.TopLevel](xref:Avalonia.Controls.TopLevel)

The window


`callback` [Avalonia.Controls.Win32Properties.CustomWndProcHookCallback](xref:Avalonia.Controls.Win32Properties.CustomWndProcHookCallback)

The callback


</section>

<section className="apiref-page__member-entry">

<span id="uid-fb40e72aa0"></span>

### GetNonClientHitTestResult Method

Gets the value of the `NonClientHitTestResult` attached property on the specified visual.

```csharp
public Avalonia.Controls.Win32Properties.Win32HitTestValue GetNonClientHitTestResult(Avalonia.Visual obj)
```

#### Parameters

`obj` [Avalonia.Visual](xref:Avalonia.Visual)

The visual.


#### Returns

[Avalonia.Controls.Win32Properties.Win32HitTestValue](xref:Avalonia.Controls.Win32Properties.Win32HitTestValue)

The hit test value for `obj`.


</section>

<section className="apiref-page__member-entry">

<span id="uid-40a77da673"></span>

### GetWindowCornerPreference Method

Gets the value of the `WindowCornerPreference` attached property on the specified window.

```csharp
public Avalonia.Controls.Win32Properties.WindowCornerPreference GetWindowCornerPreference(Avalonia.Controls.Window window)
```

#### Parameters

`window` [Avalonia.Controls.Window](xref:Avalonia.Controls.Window)

The window.


#### Returns

[Avalonia.Controls.Win32Properties.WindowCornerPreference](xref:Avalonia.Controls.Win32Properties.WindowCornerPreference)

The window corner preference for `window`.


</section>

<section className="apiref-page__member-entry">

<span id="uid-1fa69055d6"></span>

### RemoveWindowStylesCallback Method

Removes a callback to set the window's style.

```csharp
public void RemoveWindowStylesCallback(Avalonia.Controls.TopLevel topLevel, Avalonia.Controls.Win32Properties.CustomWindowStylesCallback callback)
```

#### Parameters

`topLevel` [Avalonia.Controls.TopLevel](xref:Avalonia.Controls.TopLevel)

The window implementation


`callback` [Avalonia.Controls.Win32Properties.CustomWindowStylesCallback](xref:Avalonia.Controls.Win32Properties.CustomWindowStylesCallback)

The callback


</section>

<section className="apiref-page__member-entry">

<span id="uid-e28e9d382c"></span>

### RemoveWndProcHookCallback Method

Removes a custom callback for the window's WndProc

```csharp
public void RemoveWndProcHookCallback(Avalonia.Controls.TopLevel topLevel, Avalonia.Controls.Win32Properties.CustomWndProcHookCallback callback)
```

#### Parameters

`topLevel` [Avalonia.Controls.TopLevel](xref:Avalonia.Controls.TopLevel)

The window


`callback` [Avalonia.Controls.Win32Properties.CustomWndProcHookCallback](xref:Avalonia.Controls.Win32Properties.CustomWndProcHookCallback)

The callback


</section>

<section className="apiref-page__member-entry">

<span id="uid-880349e197"></span>

### SetNonClientHitTestResult Method

Sets the value of the `NonClientHitTestResult` attached property on the specified visual.

```csharp
public void SetNonClientHitTestResult(Avalonia.Visual obj, Avalonia.Controls.Win32Properties.Win32HitTestValue value)
```

#### Parameters

`obj` [Avalonia.Visual](xref:Avalonia.Visual)

The visual.


`value` [Avalonia.Controls.Win32Properties.Win32HitTestValue](xref:Avalonia.Controls.Win32Properties.Win32HitTestValue)

The value to set.


</section>

<section className="apiref-page__member-entry">

<span id="uid-fafd01f2b1"></span>

### SetWindowCornerPreference Method

Sets the value of the `WindowCornerPreference` attached property on the specified window.

```csharp
public void SetWindowCornerPreference(Avalonia.Controls.Window window, Avalonia.Controls.Win32Properties.WindowCornerPreference value)
```

#### Parameters

`window` [Avalonia.Controls.Window](xref:Avalonia.Controls.Window)

The window.


`value` [Avalonia.Controls.Win32Properties.WindowCornerPreference](xref:Avalonia.Controls.Win32Properties.WindowCornerPreference)

The value to set.


#### Remarks

This value is supported starting with Windows 11 Build 22000.
It is ignored on earlier Windows versions.

</section>

## Fields

| Name | Description |
| --- | --- |
| [NonClientHitTestResultProperty](#uid-5912f2bb07) | Defines the `NonClientHitTestResult` attached property. |
| [WindowCornerPreferenceProperty](#uid-a9aa8feb84) | Defines the `WindowCornerPreferenceProperty` attached property. |

<section className="apiref-page__member-entry">

<span id="uid-5912f2bb07"></span>

### NonClientHitTestResultProperty Field

Defines the `NonClientHitTestResult` attached property.

```csharp
public Avalonia.AttachedProperty<Avalonia.Controls.Win32Properties.Win32HitTestValue> NonClientHitTestResultProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a9aa8feb84"></span>

### WindowCornerPreferenceProperty Field

Defines the `WindowCornerPreferenceProperty` attached property.

```csharp
public Avalonia.AttachedProperty<Avalonia.Controls.Win32Properties.WindowCornerPreference> WindowCornerPreferenceProperty
```

</section>

</ApiRefPage>

